# datastore-flex

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
datastoreflex/: __init__.py  client.py
src/datastoreflex/: __init__.py  client.py
