[project]
dependencies = ["cloud-files", "google-cloud-datastore"]
description = "Alternative Datastore client that can store larger objects in buckets."
name = "datastoreflex"
readme = "README.md"
requires-python = ">=3.6"
version = "0.5.0"

[project.optional-dependencies]
dev = ["black", "build", "codecov", "hatch", "pylint", "twine"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
