[bumpversion]
current_version = 0.1.0

[metadata]
name = datastoreflex
version = 0.1.0
author = Akhilesh Halageri
description = Extend datastore client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/seung-lab/datastore-flex
project_urls =
	Bug Tracker = https://github.com/seung-lab/datastore-flex/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= datastoreflex
packages = find:
python_requires = >=3.6

[options.packages.find]
where = datastoreflex